--- a/templates/base.html
+++ b/templates/base.html
@@ -24,5 +24,6 @@
 
     <script src="{{ url_for('static', filename='js/htmx.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/bootstrap_js/bootstrap.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/print.js') }}"></script>
 </body>
 </html>
