--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,18 +1,64 @@
 #parent-cont {
     height: 100vh;
-    width: 100vw;
+    width: 98vw;
     display: flex;
     flex-direction: column;
 }
 
+#main-cont {
+    height: 85vh;
+display: grid;
+grid-template-columns: repeat(2, 1fr);
+grid-template-rows: 0.1fr 1fr;
+grid-column-gap: 0px;
+grid-row-gap: 0px;
+
+}
+
 #nav-bar {
     display: flex;
+    justify-content: space-between;
     
 }
 
-/* * {
-    border: 1px solid red;
-} */
+#nav-bar > a {
+    text-decoration: none;
+    color: black;
+    font-weight: 700;
+    font-size: 28px;
+}
+
+#nav-bar > a:hover {
+    color: green;
+}
+
+#search-cont {
+    grid-area: 1 / 1 / 2 / 3;
+    display: flex;
+    
+    justify-content: center;
+}
+
+#search {
+    width: 80%;
+    border-radius: 5px;
+    border: 1px solid black ;
+    
+    margin-bottom: 10px
+}
+
+
+
+#table-cont {
+    grid-area: 2 / 1 / 3 / 2;
+    overflow-x: scroll;
+    margin-right: 5px;
+}
+
+#item-table {
+    width: 100%;
+}
+
 
 #my_button {
     color: pink;
@@ -27,3 +73,18 @@ th {
 td {
     border: 2px solid black !important;
 }
+
+#item-form > .mb-3> input{
+    width: 80% !important;
+}
+
+
+
+
+
+
+
+
+/* * {
+    border: 1px solid red;
+} */
