--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -3,9 +3,8 @@
 {% block content %}
 
 
-<h1 id="">This is inventory</h1>
 
-<input type="text" 
+<div id="search-cont"><input type="text" 
        name="search" 
        id="search" 
        placeholder="Search"
@@ -13,10 +12,11 @@
        hx-include="this"
        hx-trigger="keyup"
        hx-target="#table-body"
-       hx-swap="innerHTML">
+       hx-swap="innerHTML"
+       ></div>
 
-<table id="item-table">
-    <thead>
+<div id="table-cont"><table id="item-table">
+    <thead class="sticky-top" style="background-color: green;">
         <th>Item ID</th>
         <th>Name</th>
         <th>Price</th>
@@ -35,7 +35,7 @@
                 <td>{{row['item_price'] }}</td>
                 <td>{{row['item_amount'] }}</td>
                 <td>{{row['item_exp_date'] }}</td>
-                <td>
+                <td style="width: 200px;">
 
 
                     <button class="btn btn-success"
@@ -53,23 +53,67 @@
                             hx-target="#item-row-{{row['item_id']}}">Delete</button>
                     
 
+                    <button class="btn btn-info" 
+                            data-bs-toggle="modal"
+                            data-bs-target="#printmodal"
+                            hx-post="{{url_for('print_item', item_id=row['item_id'])}}"
+                            hx-target="#modal-body">Print</button>
+
                 </td>
             </tr>
             {% endfor %}
         {% endif %}
     </tbody>
     
-</table>
+</table></div>
 
-<form action="{{ url_for('add_item')}}" method="POST" id="my_form" hx-boost="true">
-    <input type="text" name="item_name">
-    <input type="text" name="item_price">
-    <input type="file" name="item_amount">
-    <input type="text" name="item_exp_date">
-    <button class="btn btn-primary">Add Item</button>
+<form action="{{ url_for('add_item')}}" method="POST" id="my_form" hx-boost="true"   id="item-form">
+   
+    
+    <div class="mb-3">
+    <label for="exampleInputEmail1" class="form-label">Item Name</label>
+    <input type="text" class="form-control" id="exampleInputEmail1" name="item_name">
+    
+  </div>
+  <div class="mb-3">
+    <label for="exampleInputPassword1" class="form-label">Item Price</label>
+    <input type="text" class="form-control" id="exampleInputPassword1" name="item_price">
+  </div>
+
+  <div class="mb-3">
+    <label for="exampleInputPassword1" class="form-label">Item Amount</label>
+    <input type="text" class="form-control" id="exampleInputPassword1" name="item_amount">
+  </div>
+
+  <div class="mb-3">
+    <label for="exampleInputPassword1" class="form-label">Item Exp. Date</label>
+    <input type="text" class="form-control" id="exampleInputPassword1" name="item_exp_date">
+  </div>
+  
+
+  
+  <button type="submit" class="btn btn-primary">Submit</button>
 </form>
 
-<a href="{{url_for('login')}}">Login</a>
+
+<div class="modal fade" id="printmodal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Item</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body" id="modal-body">
+        
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary" onclick="print_item()">Print</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 
 
 {% endblock %}
